made Knight.Java into java 17